fixed for rounds display when using 3-person mode, and z-index of 1 for settings menu.

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ progress::-webkit-progress-value {
   font-size: 8vw;
   display: flex;
   flex-direction: column;
+  width: 25vw;
 }
 
 .app,
@@ -244,7 +245,12 @@ button:active {
   transition: all 300ms;
   cursor: auto !important;
   padding-left: 2rem;
+  z-index: 1;
 }
+/* 
+#settings > section {
+  margin-left: 2rem;
+} */
 
 #settings button {
   cursor: pointer !important;
